--- a/requirements.txt
+++ b/requirements.txt
@@ -1,78 +1,92 @@
-appdirs==1.4.4
-argon2-cffi @ file:///C:/ci/argon2-cffi_1596828549974/work
-async-generator==1.10
-attrs @ file:///tmp/build/80754af9/attrs_1600298409949/work
-audioread==2.1.8
-backcall==0.2.0
-bleach @ file:///tmp/build/80754af9/bleach_1600439572647/work
-certifi==2020.6.20
-cffi @ file:///C:/ci/cffi_1600699250966/work
-chardet==3.0.4
-colorama==0.4.3
-cycler==0.10.0
-decorator==4.4.2
-defusedxml==0.6.0
-entrypoints==0.3
-idna==2.10
-importlib-metadata @ file:///tmp/build/80754af9/importlib-metadata_1602276842396/work
-ipykernel @ file:///C:/ci/ipykernel_1596208728219/work/dist/ipykernel-5.3.4-py3-none-any.whl
-ipython @ file:///C:/ci/ipython_1598883894321/work
-ipython-genutils==0.2.0
-jedi @ file:///C:/ci/jedi_1596472767194/work
-Jinja2==2.11.2
-joblib==0.17.0
-jsonschema @ file:///tmp/build/80754af9/jsonschema_1602607155483/work
-jupyter-client @ file:///tmp/build/80754af9/jupyter_client_1601311786391/work
-jupyter-core==4.6.3
-jupyterlab-pygments @ file:///tmp/build/80754af9/jupyterlab_pygments_1601490720602/work
-kiwisolver==1.2.0
-librosa==0.8.0
-llvmlite==0.34.0
-MarkupSafe @ file:///C:/ci/markupsafe_1594405949945/work
-matplotlib @ file:///C:/ci/matplotlib-base_1597858387645/work
-mistune @ file:///C:/ci/mistune_1594373272338/work
-mkl-fft==1.2.0
-mkl-random==1.1.1
-mkl-service==2.3.0
-nb-conda-kernels @ file:///C:/ci/nb_conda_kernels_1600427315623/work
-nbclient @ file:///tmp/build/80754af9/nbclient_1602783176460/work
-nbconvert @ file:///C:/ci/nbconvert_1601914921407/work
-nbformat @ file:///tmp/build/80754af9/nbformat_1602783287752/work
-nest-asyncio @ file:///tmp/build/80754af9/nest-asyncio_1601499549014/work
-notebook @ file:///C:/ci/notebook_1601494955742/work
-numba==0.51.2
-numpy @ file:///C:/ci/numpy_and_numpy_base_1596233945180/work
-olefile==0.46
-packaging==20.4
-pandocfilters==1.4.2
-parso==0.7.0
-pickleshare @ file:///C:/ci/pickleshare_1594374056827/work
-Pillow @ file:///C:/ci/pillow_1602782968170/work
-pooch==1.2.0
-prometheus-client==0.8.0
-prompt-toolkit @ file:///tmp/build/80754af9/prompt-toolkit_1602688806899/work
-pycparser @ file:///tmp/build/80754af9/pycparser_1594388511720/work
-Pygments @ file:///tmp/build/80754af9/pygments_1600458456400/work
-pyparsing==2.4.7
-pyrsistent @ file:///C:/ci/pyrsistent_1600123688363/work
-python-dateutil==2.8.1
-pywin32==227
-pywinpty==0.5.7
-pyzmq==19.0.2
-requests==2.24.0
-resampy==0.2.2
-scikit-learn==0.23.2
-scipy==1.5.3
-Send2Trash==1.5.0
-six==1.15.0
-SoundFile==0.10.3.post1
-terminado==0.9.1
-testpath==0.4.4
-threadpoolctl==2.1.0
-tornado==6.0.4
-traitlets @ file:///tmp/build/80754af9/traitlets_1602787416690/work
-urllib3==1.25.11
-wcwidth @ file:///tmp/build/80754af9/wcwidth_1593447189090/work
-webencodings==0.5.1
-wincertstore==0.2
-zipp @ file:///tmp/build/80754af9/zipp_1602002379921/work
+Package             Version
+------------------- -------------------
+appdirs             1.4.4
+argon2-cffi         20.1.0
+async-generator     1.10
+attrs               20.2.0
+audioread           2.1.8
+backcall            0.2.0
+black               20.8b1
+bleach              3.2.1
+certifi             2020.6.20
+cffi                1.14.3
+chardet             3.0.4
+click               7.1.2
+colorama            0.4.3
+cycler              0.10.0
+decorator           4.4.2
+defusedxml          0.6.0
+entrypoints         0.3
+idna                2.10
+importlib-metadata  2.0.0
+ipykernel           5.3.4
+ipython             7.18.1
+ipython-genutils    0.2.0
+jedi                0.17.2
+Jinja2              2.11.2
+joblib              0.17.0
+jsonschema          3.2.0
+jupyter-client      6.1.7
+jupyter-core        4.6.3
+jupyterlab-pygments 0.1.2
+kiwisolver          1.2.0
+librosa             0.8.0
+llvmlite            0.34.0
+MarkupSafe          1.1.1
+matplotlib          3.3.1
+mistune             0.8.4
+mkl-fft             1.2.0
+mkl-random          1.1.1
+mkl-service         2.3.0
+mypy-extensions     0.4.3
+nb-conda-kernels    2.3.0
+nbclient            0.5.1
+nbconvert           6.0.7
+nbformat            5.0.8
+nest-asyncio        1.4.1
+notebook            6.1.4
+numba               0.51.2
+numpy               1.19.1
+olefile             0.46
+packaging           20.4
+pandocfilters       1.4.2
+parso               0.7.0
+pathspec            0.8.0
+pickleshare         0.7.5
+Pillow              8.0.0
+pip                 20.2.3
+pooch               1.2.0
+prometheus-client   0.8.0
+prompt-toolkit      3.0.8
+pycparser           2.20
+Pygments            2.7.1
+pyparsing           2.4.7
+pyrsistent          0.17.3
+python-dateutil     2.8.1
+pywin32             227
+pywinpty            0.5.7
+pyzmq               19.0.2
+regex               2020.10.28
+requests            2.24.0
+resampy             0.2.2
+scikit-learn        0.23.2
+scipy               1.5.3
+Send2Trash          1.5.0
+setuptools          50.3.0.post20201006
+six                 1.15.0
+SoundFile           0.10.3.post1
+terminado           0.9.1
+testpath            0.4.4
+threadpoolctl       2.1.0
+toml                0.10.1
+tornado             6.0.4
+tqdm                4.50.2
+traitlets           5.0.5
+typed-ast           1.4.1
+typing-extensions   3.7.4.3
+urllib3             1.25.11
+wcwidth             0.2.5
+webencodings        0.5.1
+wheel               0.35.1
+wincertstore        0.2
+zipp                3.3.0
